tests/baselines/reference/restParamModifier2.errors.txt
tests/cases/compiler/restParamModifier2.ts(2,17): error TS1317: A parameter property cannot be declared using a rest parameter.


==== tests/cases/compiler/restParamModifier2.ts (1 errors) ====
    class C {
        constructor(public ...rest: string[]) {}
                    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1317: A parameter property cannot be declared using a rest parameter.
    }